[project]
name = "pokemon-center"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "greenlet>=3.2.4",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "playwright>=1.55.0",
    "pluggy>=1.6.0",
    "pyee>=13.0.0",
    "pygments>=2.19.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
